<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".LoginActivity.EnterOtpPage">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="17"
        android:orientation="vertical"
        android:layout_height="0dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:padding="20dp"
            android:text="@string/enter_the_otp_received_on_your_mobile"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="15"
        android:orientation="vertical"
        android:layout_height="0dp">


        <TextView
            android:id="@+id/user_number_EnterOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/phone_number"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/change_number"
            android:layout_width="213dp"
            android:layout_height="59dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-5dp"
            android:background="#0000"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="#FF9800"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_weight="20"
        android:orientation="vertical"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:background="@drawable/ic_unlocked"
            android:layout_height="wrap_content"
            android:contentDescription="@string/unlock_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_weight="12"
        android:layout_height="0dp">

        <EditText
            android:id="@+id/enter_otp_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="number"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/box"
            android:gravity="center"
            android:hint="@string/enter_the_otp"
            android:maxLength="10"
            android:autofillHints="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="11"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="0dp">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="0dp">

        <Button
            android:id="@+id/Phone_Otp_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="81dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="161dp"
            android:layout_marginBottom="5dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="#0E30EA"
            android:text="@string/submit"
            android:textAllCaps="false" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/Login_Gmail_otp_page"
            android:layout_width="329dp"
            android:layout_height="48dp"
            android:background="#0000"
            android:text="@string/login_with_g_mail"
            android:textAllCaps="false"
            android:textColor="#FF9800"
            android:textSize="15sp" />
    </RelativeLayout>



</LinearLayout>